--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
     "@ant-design/pro-components": "^2.6.2",
+    "@react-three/fiber": "^8.13.4",
+    "@types/three": "^0.152.1",
     "antd": "^5.6.2",
     "axios": "^1.4.0",
     "echarts": "^5.4.2",
@@ -29,6 +31,7 @@
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.13.0"
+    "react-router-dom": "^6.13.0",
+    "three": "^0.153.0"
   }
 }
