--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
-    "three": "^0.153.0"
+    "three": "^0.153.0",
+    "zustand": "^4.3.8"
   }
 }
