--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/three": "^0.152.1",
     "antd": "^5.6.2",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "echarts": "^5.4.2",
     "less": "^4.1.3",
     "lodash-es": "^4.17.21",
