--- a/package.json
+++ b/package.json
@@ -1,38 +1,60 @@
 {
-  "name": "template3",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "template",
+  "private": true,
+  "version": "3.0.1",
+  "type": "module",
+  "description": "工路模板",
   "scripts": {
-    "dev": "vite --mode development"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/lodash-es": "^4.17.7",
-    "@types/node": "^20.3.1",
-    "@types/react": "^18.2.12",
-    "@types/react-dom": "^18.2.5",
-    "@types/react-router-dom": "^5.3.3",
-    "@vitejs/plugin-react": "^4.0.0",
-    "typescript": "^5.1.3",
-    "vite": "^4.3.9"
+    "dev": "vite --port 8800 --mode development",
+    "start": "yarn dev",
+    "build:dev": "vite build --mode development",
+    "build:test": "vite build --mode test",
+    "build": "vite build --mode production",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview --port 83",
+    "clean:cache": "rimraf node_modules/.cache/ && rimraf node_modules/.vite"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.1.4",
-    "@ant-design/pro-components": "^2.6.2",
-    "@react-three/fiber": "^8.13.4",
-    "@types/three": "^0.152.1",
-    "antd": "^5.6.2",
+    "@ant-design/charts": "^1.4.2",
+    "@ant-design/icons": "^5.2.5",
+    "@ant-design/pro-components": "^2.6.11",
+    "ahooks": "^3.7.8",
+    "antd": "^5.8.3",
     "axios": "^1.4.0",
-    "echarts": "^5.4.2",
-    "less": "^4.1.3",
+    "dayjs": "^1.11.9",
     "lodash-es": "^4.17.21",
+    "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.13.0",
-    "three": "^0.153.0",
-    "zustand": "^4.3.8"
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.14.2"
+  },
+  "devDependencies": {
+    "@ice/store": "^2.0.4",
+    "@types/lodash-es": "^4.17.8",
+    "@types/node": "^20.4.8",
+    "@types/qs": "^6.9.7",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.14",
+    "eslint": "8.22",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "from": "^0.1.7",
+    "less": "^4.2.0",
+    "less-vars-to-js": "^1.3.0",
+    "mockjs": "^1.1.0",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-externals": "^0.6.2",
+    "vite-plugin-html": "^3.2.0",
+    "vite-plugin-mock": "2.9.8",
+    "vite-plugin-windicss": "^1.9.1"
   }
 }
