--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "antd": "^5.8.3",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
+    "immer": "^10.0.3",
     "lodash-es": "^4.17.21",
     "qs": "^6.11.2",
     "react": "^18.2.0",
