--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
     "immer": "^10.0.3",
+    "jotai": "^2.6.5",
     "lodash-es": "^4.17.21",
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.12",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.2"
   },
