--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ant-design/charts": "^1.4.2",
     "@ant-design/icons": "^5.2.5",
     "@ant-design/pro-components": "^2.6.11",
+    "@react-spring/web": "^9.7.3",
     "ahooks": "^3.7.8",
     "antd": "^5.8.3",
     "axios": "^1.4.0",
