--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "template",
+  "name": "react-template",
   "private": true,
-  "version": "3.0.1",
+  "version": "1.1.0",
   "type": "module",
-  "description": "工路模板",
+  "description": "react模板",
   "scripts": {
     "dev": "vite --port 8800 --mode development",
     "start": "yarn dev",
@@ -45,6 +45,7 @@
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
     "eslint": "8.22",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "from": "^0.1.7",
@@ -52,6 +53,7 @@
     "less-vars-to-js": "^1.3.0",
     "mockjs": "^1.1.0",
     "postcss": "^8.4.27",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
