--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "antd": "^5.8.3",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
+    "history": "^5.3.0",
     "immer": "^10.0.3",
     "jotai": "^2.6.5",
     "lodash-es": "^4.17.21",
