--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-template",
   "private": true,
-  "version": "1.1.0",
+  "version": "1.2.0",
   "type": "module",
   "description": "react模板",
   "scripts": {
@@ -20,12 +20,11 @@
     "@ant-design/pro-components": "^2.6.11",
     "@react-spring/web": "^9.7.3",
     "ahooks": "^3.7.8",
-    "antd": "^5.8.3",
+    "antd": "^5.22.2",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
     "history": "^5.3.0",
     "immer": "^10.0.3",
-    "jotai": "^2.6.5",
     "lodash-es": "^4.17.21",
     "qs": "^6.11.2",
     "react": "^18.2.0",
@@ -45,6 +44,7 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
+    "click-to-react-component": "^1.1.2",
     "eslint": "8.22",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^4.6.0",
