--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
   "dependencies": {
     "@ant-design/charts": "^1.4.2",
     "@ant-design/icons": "^5.2.5",
-    "@ant-design/pro-components": "^2.6.11",
+    "@ant-design/pro-components": "^2.8.2",
     "@react-spring/web": "^9.7.3",
     "ahooks": "^3.7.8",
-    "antd": "^5.22.2",
+    "antd": "5.22.1",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
     "history": "^5.3.0",
@@ -58,6 +58,7 @@
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-externals": "^0.6.2",
     "vite-plugin-html": "^3.2.0",
